--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+@import "antd/dist/antd.css";
+
+body {
+  background: url("./assets/18771.jpg") center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-container {
+  background: #ffd255;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 30%;
+  border-radius: 10px;
+  margin: 25vh auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.clock_container,
+.clock_started {
+  /* color: rgb(245, 245, 245); */
+  background: rgb(255, 255, 255);
+  padding: 20px;
+  width: 40vw;
+  margin: 15vh auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.clock_started {
+  border: 2px solid #0d73d3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clock_container > * {
+  width: 100%;
+  margin-top: 0.5rem;
+}
+
+.clock_container div {
+  display: flex;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  align-items: center;
 }
