--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  width: 30%;
+  width: 25%;
   border-radius: 10px;
   margin: 25vh auto;
+}
+
+.form-container > * {
+  width: 100%;
 }
 
 .clock_container,
@@ -23,15 +27,19 @@ body {
   /* color: rgb(245, 245, 245); */
   background: rgb(255, 255, 255);
   padding: 20px;
-  width: 40vw;
-  margin: 15vh auto;
+  width: 30vw;
+  margin: 20vh auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  box-shadow: 10px 10px 10px #0000;
 }
 
+.clock_started {
+  height: 55vh;
+}
 .clock_started {
   border: 2px solid #0d73d3;
 }
